argo/argo-cd/resources/namespace.yaml
***REMOVED*** Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: argo-system
  labels:
    name: argo-system
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
